--- a/ingrid/package.json
+++ b/ingrid/package.json
@@ -15,7 +15,10 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
+    "pg": "^7.6.0",
+    "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-beta6",
+    "sequelize": "^5.0.0-0",
     "serve-favicon": "^2.3.0"
   }
 }
