--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-
-server/config/config.json
+**server/config/config.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
