--- a/ingrid/package.json
+++ b/ingrid/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "dotenv": "^6.1.0",
     "express": "^4.14.0",
+    "express-session": "1.15.6",
     "morgan": "^1.7.0",
     "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
